# staking-program

./: .prettierignore  .prettierrc.json  Anchor.toml  package.json
migrations/: createStakingPools.ts  deploy.ts  token.json
programs/staking/: Cargo.toml
programs/staking/src/: account.rs  constants.rs  context.rs  error.rs  lib.rs  utils.rs
tests/: staking.ts  utils.ts
