[package]
name = "staking"
version = "0.1.0"
description = "FCON staking program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["local-testing"]
local-testing = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-associated-token-account = "1.0.5"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }